# grpc-gateway

examples/internal/clients/unannotatedecho/: BUILD.bazel  client.go
examples/internal/clients/unannotatedecho/api/: swagger.yaml
examples/internal/proto/examplepb/: BUILD.bazel  unannotated_echo_service.swagger.json
